# pco_matlab_wrapper

./: .gitignore  README.md  buildMatlabWrapper.m  default.nix  meson.build  mip_tool.cpp  pco_transfer.cpp  pco_wrapper.hpp  testMatlabWrapper.m
include/: pco_wrapper.hpp  tiff_writer.hpp
matlab/: buildMatlabWrapper.m  testMatlabWrapper.m
src/: pco_speedtest.cpp  pco_transfer.cpp  pco_wrapper.cpp  test_tiff.cpp  test_with_camera.cpp  tiff_writer.cpp
subprojects/: tinytiff.wrap
subprojects/packagefiles/tinytiff_patch/: meson.build
subprojects/packagefiles/tinytiff_patch/src/: tinytiff_export.h  tinytiff_version.h
